2002-12-01  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/doc/tour.xml: Update for QM 2.0.

	* qm/fields.py (SetPopupPage): Remove.
	(TupleField.GetValueFromDomNode): Fix typo.
	(TupleField.MakeDomNodeForValue): Likewise.

2002-11-29  Mark Mitchell <mark@codesourcery.com>

	* qm/web.py (WebRequestHandler.__HandleFileRequest): Open files in 
	binary mode.
	* qm/test/share/dtml/dir.dtml: Avoid constructs which IE does not 
	like.
	* qm/test/share/dtml/navigation-bar.dtml: Support IE event model.
	* qm/test/share/web/images/logo.png: Remove.
	* qm/test/share/web/images/logo.gif: New file.

2002-11-28  Mark Mitchell  <mark@codesourcery.com>

	* NEWS: Note that Netscape 4 is no longer a supported browser.
	* doc/manual/common-manual.xml: Likewise.
	* qm/platform_unix.py (open_in_browser): Default to mozilla.
	* qm/web.py (DTMLPage.GenerateEndBody): Remove Problems? link.
	(DTMLPage.MakeMenuItem): Remove.
	(WebRequestHandler.__HandleScriptRequest): Change shutdown
	message.
	* qm/test/share/dtml/dir.dtml: Add logo.
	* qm/test/share/dtml/navigation-bar.dtml: Rework menu logic.
	* qm/test/web/web.py (QMTestPage.__init__): Update menu items to
	use URLs, not JavaScript code.
	* share/dtml/problems.dtml: Remove second parameter to
	GenerateEndBody.
	* share/dtml/user.dtml: Likewise.
	* share/web/common.js (get_left): New function.
	(get_right): Likewise.
	(get_top): Likewise.
	(get_bottom): Likewise.
	(is_parent_of): Likewise.
	* share/web/images/logo.png: New file.
	* share/web/stylesheets/qm.css: Update style for menus.
	
2002-11-27  Vladimir Prus <ghost@cs.msu.su>

	* qm/test/web/web.py (ResultPage.__init__): Add "This Test" to run
	menu.
	(ResultPage.MakeRunUrl): New method.
	* qm/test/share/dtml/result.dtml (run_test): New method.
	
2002-11-25  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/base.py (load_results): Support pickled results files.
	* qm/test/cmdline.py (xml_result_stream): Don't import it.
	(pickle_result_stream): Do import it.